kafka and cors fix